<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_header"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:src="@drawable/bts_vect"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="71dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="normal"
            android:textSize="16sp"
            android:text="@string/start"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_start_btn"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/shape_balance"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/llHeader">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColor="#90BEDD"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/your_balance"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            tools:text="15 Satoshi"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tvBtcBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textAllCaps="true"
            tools:text="0,00000015 Btc"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"
            android:textSize="12sp"/>

    </LinearLayout>

    <com.bb.bts.ui.CustomProgressBar
        android:id="@+id/pbProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/llBalance"/>

    <LinearLayout
        android:id="@+id/llBoost"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_boost_btn"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/pbProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_gravity="center"
            android:text="@string/boost"
            android:textColor="#8EC0DD"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rocket"
            android:layout_gravity="center"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llServers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llBoost">

        <LinearLayout
            android:id="@+id/llServer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:background="@drawable/selector_server"
            android:orientation="vertical">

            <com.bb.bts.ui.ArcProgressBar
                android:id="@+id/apProgress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ping"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ping_color"/>

                <TextView
                    android:id="@+id/tvPing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    tools:text = "15"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_regular"
                    android:duplicateParentState="true"
                    android:textColor="@color/d_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ms_color"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
                android:text="SERVER 1"
                android:textSize="14sp"
                android:textColor="#8EC0DD"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/llServer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:background="@drawable/selector_server"
            android:orientation="vertical">

            <com.bb.bts.ui.ArcProgressBar
                android:id="@+id/apProgress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:duplicateParentState="true"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ping"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ping_color"/>

                <TextView
                    android:id="@+id/tvPing2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    tools:text = "15"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_regular"
                    android:duplicateParentState="true"
                    android:textColor="@color/d_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ms_color"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
                android:text="SERVER 2"
                android:textSize="14sp"
                android:textColor="#8EC0DD"/>

        </LinearLayout>




        <LinearLayout
            android:id="@+id/llServer3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:background="@drawable/selector_server"
            android:orientation="vertical">

            <com.bb.bts.ui.ArcProgressBar
                android:id="@+id/apProgress3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ping"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ping_color"/>

                <TextView
                    android:id="@+id/tvPing3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    tools:text = "15"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_regular"
                    android:duplicateParentState="true"
                    android:textColor="@color/d_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ms_color"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
                android:text="SERVER 3"
                android:textSize="14sp"
                android:textColor="#8EC0DD"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/llServer4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_server"
            android:orientation="vertical">

            <com.bb.bts.ui.ArcProgressBar
                android:id="@+id/apProgress4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ping"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ping_color"/>

                <TextView
                    android:id="@+id/tvPing4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    tools:text = "15"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_regular"
                    android:duplicateParentState="true"
                    android:textColor="@color/d_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_light"
                    android:duplicateParentState="true"
                    android:textColor="@color/ms_color"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
                android:text="SERVER 4"
                android:textSize="14sp"
                android:textColor="#8EC0DD"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/shape_take_btn"
        android:fontFamily="@font/roboto_bold"
        android:paddingVertical="28dp"
        android:text="@string/take_btc"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llServers"
        app:layout_constraintVertical_bias="0.751" />

</androidx.constraintlayout.widget.ConstraintLayout>